--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logic Gate Simulator</title>
+    <title>Boolforge</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;600;700&family=JetBrains+Mono:wght@400;600&display=swap"
         rel="stylesheet">
